Added google adsense
For ads and addes https image

--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <title>
         Robot's
     </title>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+    <script>
+
+        (adsbygoogle = window.adsbygoogle || []).push({
+
+            google_ad_client: "ca-pub-3779105600481503",
+
+            enable_page_level_ads: true
+
+        });
+
+    </script>
     <style>
         
         #top, #bottom, #left, #right {
@@ -58,7 +71,7 @@ body {
     <br />* <a href="page2.html">NXT MindCuber</a> 
     <br>* Self-built faster Rubiks solving robot
 	
-	<br /> <img src="http://puui.qpic.cn/qqvideo_ori/0/l0151btdxzp_496_280/0" title="MindCuber" />
+	<br /> <img src="https://i.imgur.com/P5MuT2g.jpg" title="MindCuber" width="400" length="500" />
 	<img src="https://i.ytimg.com/vi/ue7luHsvt6U/maxresdefault.jpg" title="RukuRobot" width="400" length="500" />
     <div id="left"></div>
     <div id="right"></div>
