--- a/page2.html
+++ b/page2.html
@@ -17,7 +17,7 @@
 
     </script>
     <style>
-        
+        /* This part is for the border*/
         #top, #bottom, #left, #right {
         background: #a5ebff;
         position: fixed;
@@ -51,11 +51,6 @@
 	<style>#top, #bottom, #left, #right { display: none; }</style>
     <![endif]-->
 </head>
-<style>
-body {
-    background-image: url("https://i.imgur.com/fN5WjGZ.jpg");
-}
-</style>
 <body>
 	<center>
 	<h1>The first one</h1>
