Added video of completion

--- a/creators.html
+++ b/creators.html
@@ -61,7 +61,7 @@ body {
 
     <center>
         <h1> We would like to give special thanks to these two people who partcipated in the building of this robot</h1>
-		<img src='https://i.imgur.com/lNS9tYv.jpg' />
+		<img src='josh.jpg' />
 		<img src='https://i.imgur.com/vhEmOYY.jpg' />
    
     </center>
