--- a/page2.html
+++ b/page2.html
@@ -63,6 +63,9 @@
 	After this we ran into the issue where sometime the cube will flip successfully and sometimes it will not. At first we were very confused with how this issue came to be, then we realised that the actual platform where the cube lays is too low, which means that the cube has to always drop down further than it would and always reach further than it should. So to solve this we raised the platform.
 	</p>
 	<img class="" title="Change of the turntable" src="https://i.imgur.com/qXeCA0Q.jpg" width="392" height="523" />
+	<video width="320" height="240" controls>
+		<source src="Solved.mp4" type="video/mp4">
+	</video>
     <div id="left"></div>
     <div id="right"></div>
     <div id="top"></div>
